--- a/backend/package.json
+++ b/backend/package.json
@@ -8,18 +8,23 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["finance", "tracker", "mern", "api"],
+  "keywords": [
+    "finance",
+    "tracker",
+    "mern",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "description": "Backend API for Personal Finance Tracker",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.10"
   }
 }
