--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0"
+    "react-router-dom": "^6.30.1",
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
