--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.1"
   },
   "devDependencies": {
